--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script>
     document.addEventListener("DOMContentLoaded", function() {
         const memberLinks = [
-            "http://localhost:8080/",
+            "https://preview--cosmic-blueprints-canvas.lovable.app/",
             "bianca-lee.html",
-            "carlos-rivera.html",
+            "",
             "dana-smith.html"
         ];
         document.querySelectorAll('.member-card').forEach((card, idx) => {
@@ -162,13 +162,13 @@
             </div>
             <div class="member-card">
                 <div class="avatar">B</div>
-                <div class="member-name">Guru prassanna</div>
+                <div class="member-name"><a href="portfolio.html" style="text-decoration: none; color:white;">Guru prassanna</a></div>
                 <div class="member-role">UI/UX Designer</div>
                 <div class="member-desc">Passionate about user-centric design and smooth experiences.</div>
             </div>
             <div class="member-card">
                 <div class="avatar">C</div>
-                <div class="member-name">Hanniya fahima</div>
+                <div class="member-name"><a href="Haaniyaa\index.html" style="text-decoration: none; color:white;">Hanniya fahima</a></div>
                 <div class="member-role">Backend Engineer</div>
                 <div class="member-desc">Loves scalable systems and robust APIs.</div>
             </div>
